# Oxide

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
.github/workflows/: windows.yml
scripts/: package-windows.ps1  test-package-windows.ps1  windows-package-lib.ps1
src/: app.rs  contained_child.rs  editor.rs  file_dialog.rs  language_ui.rs  language_ui_tests.rs  launch.rs  lib.rs  main.rs  model.rs  process.rs  runtime.rs  snapshot_view.rs  worker.rs
src/language/: actor.rs  actor_contract_tests.rs  coordinator.rs  coordinator_tests.rs  framing.rs  mod.rs  process_adapter.rs  process_adapter_tests.rs  snapshot.rs  text_index.rs
src/protocol/: codec.rs  diagnostic.rs  mod.rs  types.rs  validation.rs
tests/: app.rs  editor.rs  file_dialog.rs  launch.rs  model.rs  process_supervisor.rs  protocol.rs  runtime.rs  snapshot_view.rs  worker_process.rs
windows/: oxide-ide.exe.manifest  oxide-ide.rc
