[package]
name = "oxide-ide"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
embed-resource = "=3.0.11"

[dependencies]
arc-swap.workspace = true
eframe = { version = "=0.35.0", default-features = false, features = ["wgpu", "default_fonts", "accesskit"] }
lsp-types.workspace = true
rlox-protocol = { path = "../rlox-protocol" }
rfd = { version = "=0.17.2", features = ["common-controls-v6"] }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
egui_kittest = { version = "=0.35.0", default-features = false, features = ["eframe"] }
