[package]
name = "oxide-ide"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "LICENSE"

[build-dependencies]
embed-resource = "=3.0.11"

[dependencies]
arc-swap = "=1.9.2"
eframe = { version = "=0.35.0", default-features = false, features = ["wgpu", "default_fonts", "accesskit"] }
lsp-types = "=0.97.0"
rlox-protocol = { git = "https://github.com/fonzy1243/RLox.git", rev = "8c3fa74c4e9a36326e121df2e7ecd035202101a2", version = "=0.1.0" }
rfd = { version = "=0.17.2", features = ["common-controls-v6"] }
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = "=1.0.150"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
egui_kittest = { version = "=0.35.0", default-features = false, features = ["eframe"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = true
